# okf-mcp-server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  ralph.sh
.claude/: brainstorm-rules.md  settings.json
.claude/hooks/: commit-msg-guard.sh  commit-prefix-guard.sh  master-branch-guard.sh  naming-guard.sh  notes-guard.sh  task-validator.sh
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: ci.yml
backlog/: config.yml
backlog/tasks/: task-1 - Import-and-rename-MCP-engine-from-stacks-as-okf-mcp-server.md  task-2 - Tag-and-publish-okf-mcp-server-v0.2.0-release-after-green-CI.md  task-3 - Upgrade-Ralph-infrastructure-files-to-latest-templates.md
src/okf_mcp_server/: __init__.py  cli.py  config.py  lint_cli.py  linter.py  server.py
tests/: conftest.py  test_config.py  test_contract.py  test_linter.py  test_protocol.py  test_server.py  test_smoke.py
tests/fixtures/sample-project/backlog/decisions/: decision-1 - Sample-decision.md
tests/fixtures/sample-project/backlog/docs/: doc-1 - Sample.md
tests/fixtures/sample-project/design/: sample-design.md
