[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okf-mcp-server"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "python-frontmatter>=1.0",
]

[project.scripts]
okf-mcp-server = "okf_mcp_server.cli:main"
okf-mcp-lint = "okf_mcp_server.lint_cli:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
